# xQuant

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Config.json  README.md  api-doc.md
docs/: architecture.md  features.md  getting-started.md  project-overview.md  todo.md  ui.md
python_prediction/: __init__.py  main.py  requirements.txt
python_prediction/api/: server.py
python_prediction/backtest/: backtester.py
python_prediction/config/: config.py
python_prediction/data_collection/: binance_client.py
python_prediction/indicators/: technical_indicators.py
python_prediction/strategies/: trend_following.py
quant_front/: package.json
src/: config.rs  error.rs  lib.rs  main.rs  prediction_client.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/backtest/: data_provider.rs  engine.rs  mod.rs  performance.rs  result.rs  scenario.rs
src/core/: execution_analyzer.rs  iceberg_manager.rs  mod.rs  risk_manager.rs  strategy_manager.rs  trailing_stop_manager.rs  twap_splitter.rs  vwap_splitter.rs
src/exchange/: binance_futures.rs  dry_run.rs  mocks.rs  mod.rs  traits.rs
src/http/: mod.rs
src/indicators/: mod.rs  moving_averages.rs  oscillators.rs  trend.rs  utils.rs  volume.rs
src/market_data/: fix.rs  mod.rs  provider.rs  stream.rs  websocket.rs
src/models/: market_data.rs  mod.rs  order.rs  position.rs  trade.rs
src/order_core/: manager.rs  mod.rs  repository.rs  validator.rs
src/utils/: math.rs  (+2 more)
tests/: backtest_tests.rs  combined_strategy_tests.rs  iceberg_tests.rs  integration_tests.rs  trailing_stop_tests.rs  vwap_tests.rs
(+34 files in other folders)
