[package]
name = "xQuant"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Automated trading system with advanced order execution strategies"

[dependencies]
# Async runtime and web framework
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
csv = "1.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "serde_json"] }

# Statistics and math
statrs = "0.16"
rust_decimal = "1.30"
rust_decimal_macros = "1.30"

# Testing
mockall = "0.11"
rand = "0.8"
async-trait = "0.1.88"
futures-util = "0.3.31"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
time = "0.3.41"
lazy_static = "1.5.0"

[dev-dependencies]
rstest = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1